DetourCreateProcessWithDll(A|W) added to expWinProcs to do that magic TCHAR thing at runtime.  But nowadays, is anyone running Win98 for this to be relevent?

--- a/win/expect4win.vcxproj
+++ b/win/expect4win.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="expWinCommand.c" />
     <ClCompile Include="expWinConsoleDebugger.cpp" />
     <ClCompile Include="expWinConsoleDebuggerBreakPoints.cpp" />
+    <ClCompile Include="expWinConsoleDetourer.cpp" />
     <ClCompile Include="expWinInit.c" />
     <ClCompile Include="expWinMessage.cpp" />
     <ClCompile Include="expWinSpawnChan.cpp" />
