first trampoline added so I can understand how the class for this is to come together

--- a/win/expect4win.vcxproj
+++ b/win/expect4win.vcxproj
@@ -255,6 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\generic\exp.decls" />
+    <None Include="expWinErr.mc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
